--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/page-settings/form-access.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/page-settings/form-access.tml
@@ -37,33 +37,73 @@
 	o_type="select"
 	o_options="vererbt|,jeder|*,nur definierte Benutzer|custom,nur Chief-Editoren|%none"
 	o_changeaction="$refresh"
-/>
-<tml:case condition="tmlform.child_editors=='custom'">
-	<tml:[form-field] o_name="custom_child_editors" o_store="false" o_type="textarea" o_multiple="true"/>
-	<hr>
-</tml:case>
+>
+	<div style="margin:5px 0;color:silver">
+		<tml:case condition="!tmlform.child_editors">
+			<tml:script divider="<br>">
+				for(var struct = document.parentEntry; struct; struct = struct.parentEntry){
+					if(!struct.childEditors.isEmpty() && struct.childEditors.get(0))
+						return WGA.aliases(struct.childEditors, "jeder|*,nur Chief-Editoren|%none");
+				}
+				return ["jeder"]
+			</tml:script>
+		</tml:case>
+		<tml:case condition="tmlform.child_editors=='custom'">
+			<tml:input cssclass="form-control" name="custom_child_editors" store="false" type="textarea" multiple="true"/>
+		</tml:case>
+	</div>
+</tml:[form-field]>
 	
 <tml:[form-field] o_label="Diese Seite bearbeiten" o_name="page_editors" o_store="false"
 	o_type="select"
 	o_options="vererbt|,jeder|*,nur definierte Benutzer|custom,nur Chief-Editoren|%none"
 	o_changeaction="$refresh"
-/>
-<tml:case condition="tmlform.page_editors=='custom'">
-	<tml:[form-field] o_name="custom_page_editors" o_store="false" o_type="textarea" o_multiple="true"/>
-	<hr>
-</tml:case>
+>
+	<div style="margin:5px 0;color:silver">
+		<tml:case condition="!tmlform.page_editors">
+			<tml:script divider="<br>">
+				// page_editors: vererbt.
+				// in diesem Fall gelten die childEditors des Parents!
+				for(var struct = document.parentEntry; struct; struct = struct.parentEntry){
+					if(!struct.childEditors.isEmpty() && struct.childEditors.get(0))
+						return WGA.aliases(struct.childEditors, "jeder|*,nur Chief-Editoren|%none");
+				}
+				return ["jeder"]
+			</tml:script>
+		</tml:case>
+		<tml:case condition="tmlform.page_editors=='custom'">
+			<tml:input cssclass="form-control" name="custom_page_editors" store="false" type="textarea" multiple="true"/>
+		</tml:case>
+	</div>
+</tml:[form-field]>
 				
 <tml:[form-field] o_label="Diese Seite lesen" o_name="page_readers" o_store="false"
 	o_type="select"
 	o_options="vererbt|,nur definierte Benutzer|custom"
 	o_changeaction="$refresh"
-/>
-<tml:case condition="tmlform.page_readers=='custom'">
-	<tml:[form-field] o_name="custom_page_readers" o_store="false" o_type="textarea" o_multiple="true"/>
-</tml:case>
+>
+	<div style="margin:5px 0;color:silver">
+		<tml:case condition="!tmlform.page_readers">
+			<tml:script divider="<br>">
+				for(var struct = document.parentEntry; struct; struct = struct.parentEntry){
+					if(!struct.readers.isEmpty() && struct.readers.get(0)){
+						return struct.readers;
+					}
+				}
+				return ["jeder"]
+			</tml:script>
+		</tml:case>
+		<tml:case condition="tmlform.page_readers=='custom'">
+			<tml:input cssclass="form-control" name="custom_page_readers" store="false" type="textarea" multiple="true"/>
+		</tml:case>
+	</div>
+</tml:[form-field]>
 
 <script>
 	require(["jquery"], function($){
+		$("#<tml:script expression="tmlform.formid"/> [name=custom_child_editors]").autogrow()
+		$("#<tml:script expression="tmlform.formid"/> [name=custom_page_editors]").autogrow()
+		$("#<tml:script expression="tmlform.formid"/> [name=custom_page_readers]").autogrow()
 		$("#tab-access-link").on('shown.bs.tab', function(e){
 			$("#<tml:script expression="tmlform.formid"/> [name=custom_child_editors]").autogrow()
 			$("#<tml:script expression="tmlform.formid"/> [name=custom_page_editors]").autogrow()
