#00005887: Page settings show error message on save if page has no content

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/page-settings/render.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/page-settings/render.tml
@@ -38,7 +38,7 @@
 			contentkey: KEY,
 			dbkey: meta("db", "dbkey")
 		});
-		portlet.fireevent("struct-updated", App.getStructData(portlet.context))	// readers may have changed
+		portlet.context.content() && portlet.fireevent("struct-updated", App.getStructData(portlet.context))	// readers may have changed
 		
 		_dialog_closed=true
 	}
