--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -42,11 +42,12 @@
 			}, portlet.dbkey)
 		}
 		// create trash area if cs is version>=5
-		if(database.getContentStoreVersion()>=5 && database.getArea("$trash")==null){
+		if(database.getContentStoreVersion()>=5 && database.getArea("$trash-cm-neo")==null){
 			WGA.Master.runFunction(function(dbkey){
 				var database = db(dbkey);
-				var area = database.createArea("$trash");
+				var area = database.createArea("$trash-cm-neo");
 				area.systemArea = true;
+				area.setReaders(["accesslevel.manager"])
 				area.save();
 				console.log("Trash area created", dbkey)
 			}, portlet.dbkey)
