--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/areas/mode-edit.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/areas/mode-edit.tml
@@ -3,7 +3,13 @@
 	if (document.getDatabase().getContentStoreVersion() >= 5) {
 		document.writeExtensionData("CM_area_visible", tmlform.fieldlist("visiblefor"))
 	}
-	tmlform.store()
+	try{
+		tmlform.store()
+	}
+	catch(e){
+		_msg = e.message;
+		return false;
+	}
 </tml:action>
 
 <tml:action id="delete">
@@ -14,6 +20,7 @@
 	<div class="header"><tml:item name="areaname" type="portlet"/> ...</div>
 	
 	<div class="content">
+		<tml:item name="_msg" wrap="div" wrap_class="alert alert-danger"/>
 		<tml:{div} html_class="alert alert-danger clearfix" if="_query_delete">
 			<p style="margin:0 0 20px">Diesen Bereich wirklich löschen?</p>
 			<tml:button cssclass="btn btn-default _pull-right" clickaction="delete" portletmode="view">Bereich löschen</tml:button>
