--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
@@ -28,8 +28,29 @@
 			<tml:[form-field] o_label="Bereich" o_field="area" o_type="select" o_optionsitem="$option_areas" o_changeaction="$refresh"/>
 		</tml:case>
 
-		<tml:case if="$mc.destinationHasChildren">
-			<tml:[form-field] o_label="Position" o_name="position" o_type="select" o_options="Am Anfang der Liste|start,Am Ende der Liste|end"/>
+		<tml:case if="$mc.destinationChildren.size">
+			<tml:script>
+				_opts = ["Am Anfang der Liste|start", "Am Ende der Liste|end"]
+				var pages=[]
+				var children = $mc.destinationChildren(this, tmlform)
+				for(let doc in Iterator(children)){
+					if(!doc.mayReadContent())
+						continue;
+					var title = doc.title;
+					var c = context("docid:"+doc.getStructKey(), false)
+					if(c)
+						title = c.TITLE;
+					pages.push("Nach '" + WGA.encode("html", title) + "'|" + doc.getStructKey().toString())
+				}
+				_optgroups=null;
+				if(pages.length>1)
+					_optgroups = [{
+						label: "An definierter Position einfügen:",
+						options: pages
+					}]				
+			</tml:script>
+			<tml:comment><tml:[form-field] o_label="Position" o_name="position" o_type="select" o_options="Am Anfang der Liste|start,Am Ende der Liste|end"/></tml:comment>
+			<tml:[form-field] o_label="Position" o_name="position" o_type="select" o-optionvalues="_opts" o-optgroups="_optgroups"/>
 		</tml:case>
 		
 		<tml:{div} html_class="alert alert-danger" unless="$mc.isAllowedPageType">
