#00005908: Dialog create page: current page title not html encoded

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
@@ -78,7 +78,7 @@
 					var c = context("docid:"+doc.getStructKey(), false)
 					if(c)
 						title = c.TITLE;
-					pages.push("Nach '" + title + "'|" + doc.getStructKey().toString())
+					pages.push("Nach '" + WGA.encode("html", title) + "'|" + doc.getStructKey().toString())
 				}
 				_optgroups=null;
 				if(pages.length>1)
