--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -46,6 +46,12 @@
 		</tml:case>
 		<tml:[::form]/>
 		<tml:include ref="::required-settings" o_page="child"/>
+
+		<script>
+			require(["jquery", "select2"], function($){
+				$("select").select2({width:"100%"})
+			})
+		</script>
 		 
 	</div>
 
