--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-video.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-video.tml
@@ -44,7 +44,7 @@
 	</tml:script>
 	
 	<div class="header">
-		Video Poster bearbeeiten
+		Video Poster bearbeiten
 	</div>
 	
 	<div class="content" style="text-align:center">
