#00005914: Added content title to side panel content attachments

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
@@ -197,7 +197,7 @@
 		}
 	}
 
-	#sidepannel-content-properties{
+	#sidepannel-content-properties, #sidepannel-content-attachments{
 		.panel-heading{
 			display: flex;
 			.title{
