--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-video.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-video.tml
@@ -45,6 +45,7 @@
 	
 	<div class="header">
 		Video Poster bearbeiten
+		<a data-modal="hide">&times;</a>
 	</div>
 	
 	<div class="content" style="text-align:center">
