#00005917: Admin-Client DB-Explorer: Exception if "content modules" have some attribute value of null

--- a/OpenWGA/plugins/admin/design/tml/html/tools/db-explorer/node-info/content/modules.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/tools/db-explorer/node-info/content/modules.tml
@@ -55,17 +55,19 @@
 						//console.log(key, settings.get(key));
 						var prop = key.split("_"+mod.id)[0]
 						var value = settings.get(key)
-						if(value instanceof java.util.List){
-							var values = []
-							for(let v in Iterator(value))
-								values.push(v);
-							if(values.length==1)
-								values=values[0];
-							value = values;
-						}
-						else value = value.toString();
-						if(value)
+						if(value){
+							if(value instanceof java.util.List){
+								var values = []
+								for(let v in Iterator(value))
+									values.push(v);
+								if(values.length==1)
+									values=values[0];
+								value = values;
+							}
+							else value = value.toString();
 							mod.settings[prop]=value;
+						}
+						else mod.settings[prop]=value;
 					}
 					var children=mod.children;
 					delete mod.children;
