#00005949: query browser does not support datasources

--- a/OpenWGA/plugins/admin/design/tml/html/tools/db-query/query-result.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/tools/db-query/query-result.tml
@@ -25,7 +25,7 @@
 
 <tml:script>
 	try{
-		_result = WGA.app(tmlform.db).query(tmlform.query, {
+		_result = WGA.database(tmlform.db).query(tmlform.query, {
 			 context: isEmptyValue(tmlform.context) ? 'this' : 'db:'+tmlform.db+'/'+tmlform.context,
 		     includecurrent: true,
 			 alllanguages: tmlform.alllanguages, 
